[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qflex"
version = "1.0.0"
description = "QFlex quantile-parameterized distributions with flexible basis functions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["quantile", "distribution", "statistics", "probability", "metalog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
linear = ["cvxpy>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.urls]
Repository = "https://github.com/rohitkhanna/qflex"

[tool.hatch.build.targets.wheel]
packages = ["qflex"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv",
    "/tests/__pycache__",
]
